# wind_pub

./: .gitignore  BUILD_AND_RUN.md  CLAUDE.md  DATA_FLOW_AUDIT.md  WINDOWS_BUILD.md  cpu-freq-cap.service  information.txt  package-lock.json  package.json  prompt.md  prompt1.md  set-cpu-temp-limit.sh
.github/workflows/: deploy.yml
docs/architecture/: ARCHITECTURE_DIAGRAMS.md  BACKEND_FILE_REFERENCE.md  SYSTEM_ARCHITECTURE_DETAILED.md
native/: ARCHITECTURE.md  Doxyfile  README.md
native/docs/: BACKEND_ARCHITECTURE.md
native/docs/graphs/: architecture_overview.dot  data_flow_multi_publisher.dot  data_flow_single_publisher.dot  equation_processing_flow.dot  ffi_api_map.dot  npcap_transmission_flow.dot  packet_encoding_flow.dot  thread_concurrency_model.dot
native/include/: GooseEncoder.h  GooseReceiver.h  GooseService.h  GooseTxScheduler.h  PcapTx.h  PubWsServer.h  PublisherController.h  SharedBuffer.h  SpscBridge.h  asn1_ber_encoder.h  cid_generator.h  deadline_pacer.h  duration_manager.h  fault_injector.h  stats_manager.h  sv_encoder.h  sv_native.h  sv_publisher_instance.h  sv_stats.h
native/src/: GooseEncoder.cc  GooseReceiver.cc  GooseService.cc  GooseTxScheduler.cc  PcapTx.cc  PubWsServer.cc  PublisherController.cc  SharedBuffer.cc  SpscBridge.cc  SvEncoder.cc  SvStats.cc  asn1_ber_encoder.cc  cid_generator.cc  equation_processor.cc  equation_processor.h  fault_injector.cc  sv_publisher_instance.cc
scripts/: build.js  grant-capabilities.sh
service/: CMakeLists.txt  main.cpp  ws_server.cc  ws_server.h
src-tauri/: .gitignore  Cargo.toml  build.rs  tauri.conf.json
src-tauri/src/: commands.rs  ffi.rs  lib.rs  main.rs
substation_kit/: CMakeLists.txt  README.md
substation_kit/example/: sim_example.cpp
substation_kit/include/: SubstationKit.h
substation_kit/src/: SubstationKit.cc
web/: index.html  jsdoc.config.json  style.css  tailwind.css  tailwind.src.css
web/docs/: README.md
web/js/: app.js
web/js/components/: ChannelsDisplay.js  DataSource.js  FaultInjectionPanel.js  FrameViewer.js  GooseParameters.js  MultiPublisher.js  NetworkSettings.js  RemoteBackend.js  SVParameters.js  StandardSelector.js  Statistics.js  StreamConfigPage.js  StreamSettings.js  WiresharkHelper.js  channelColumnPicker.js  embeddedMathEditor.js  index.js  preview.js
web/js/plugins/: columnMaximize.js  columnPopout.js  configManager.js  copyFilter.js  faultSidebar.js  frameSidebar.js  globalPublishControls.js  index.js  keyboardShortcuts.js  layoutMode.js  lockdown.js  toast.js
web/js/store/: bindings.js  createState.js  index.js
web/js/utils/: cidExporter.js  dragManager.js  equationResolver.js  expressionConverter.js  faultGenerator.js  formatters.js  index.js  mathEvaluator.js  resizableColumns.js  status.js  tauriClient.js  validators.js  wsClient.js
web/shared/: standards.js
